Rename directory name

--- a/browser-app-with-type-script/package.json
+++ b/browser-app-with-type-script/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hello-world-type-script",
+  "name": "browser-app-with-type-script",
   "version": "1.0.0",
-  "description": "a basic type script app",
+  "description": "a basic type script web app",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
